[package]
name = "physics_game"
version = "0.1.0"
authors = ["Jason Schein <jasonschein@gmail.com>"]
build = "build.rs"

[dependencies]
piston = "0.10.0"
piston_window = "0.16.0"
rand = "0.3.1"
pistoncore-sdl2_window = "0.12.0"
nalgebra = "*"
ncollide = "*"
num = "*"
ecs = "*"

[dependencies.nphysics]
features = [ "2df64" ]
git = "https://github.com/sebcrozet/nphysics"